Bug 194850 - konqueror crash after start from the session
Summary: konqueror crash after start from the session
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.2.3
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-06-01 11:40 UTC by xcojack@gmail.com
Modified: 2009-09-25 19:47 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description xcojack@gmail.com 2009-06-01 11:40:40 UTC
Version:           4.2.3 (using KDE 4.2.3)
OS:                Linux
Installed from:    Unspecified Linux

When I start linux from hibernate, konqueror start from xsession, so ask me to start previous session, I click yes, and he crashed... backward from logs:

Program: Konqueror (konqueror), sygnał SIGSEGV
[Current thread is 0 (LWP 3575)]

Thread 3 (Thread 0xb24a6b70 (LWP 3642)):
#0  0xb809e424 in __kernel_vsyscall ()
#1  0xb668af82 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb7f3d6e4 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/libc.so.6
#3  0xb71fa27f in QWaitCondition::wait () from /usr/lib/libQtCore.so.4
#4  0xb71ef8f6 in ?? () from /usr/lib/libQtCore.so.4
#5  0xb71f92ce in ?? () from /usr/lib/libQtCore.so.4
#6  0xb66866bc in start_thread () from /lib/libpthread.so.0
#7  0xb7f2fffe in clone () from /lib/libc.so.6

Thread 2 (Thread 0xb1affb70 (LWP 3643)):
#0  0xb809e424 in __kernel_vsyscall ()
#1  0xb668af82 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb7f3d6e4 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/libc.so.6
#3  0xb71fa27f in QWaitCondition::wait () from /usr/lib/libQtCore.so.4
#4  0xb71ef8f6 in ?? () from /usr/lib/libQtCore.so.4
#5  0xb71f92ce in ?? () from /usr/lib/libQtCore.so.4
#6  0xb66866bc in start_thread () from /lib/libpthread.so.0
#7  0xb7f2fffe in clone () from /lib/libc.so.6

Thread 1 (Thread 0xb5e67ab0 (LWP 3575)):
[KCrash Handler]
#6  0xb803366c in KonqMainWindow::slotPartActivated () from /usr/lib/libkdeinit4_konqueror.so
#7  0xb7fe2a01 in KonqViewManager::emitActivePartChanged () from /usr/lib/libkdeinit4_konqueror.so
#8  0xb7fe2c2a in KonqViewManager::doSetActivePart () from /usr/lib/libkdeinit4_konqueror.so
#9  0xb7e07db6 in KParts::PartManager::eventFilter () from /usr/lib/libkparts.so.4
#10 0xb72e95ac in QCoreApplicationPrivate::sendThroughApplicationEventFilters () from /usr/lib/libQtCore.so.4
#11 0xb6902623 in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#12 0xb6909e44 in QApplication::notify () from /usr/lib/libQtGui.so.4
#13 0xb783f24a in KApplication::notify () from /usr/lib/libkdeui.so.5
#14 0xb72ea39b in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#15 0xb690d229 in QApplicationPrivate::setFocusWidget () from /usr/lib/libQtGui.so.4
#16 0xb6951c93 in QWidget::setFocus () from /usr/lib/libQtGui.so.4
#17 0xb3ab8068 in DOM::DocumentImpl::setFocusNode () from /usr/lib/libkhtml.so.5
#18 0xb3a515c8 in KHTMLPart::checkCompleted () from /usr/lib/libkhtml.so.5
#19 0xb3a51c16 in KHTMLPart::slotFinishedParsing () from /usr/lib/libkhtml.so.5
#20 0xb3a51f10 in KHTMLPart::closeUrl () from /usr/lib/libkhtml.so.5
#21 0xb3a59980 in KHTMLPart::~KHTMLPart () from /usr/lib/libkhtml.so.5
#22 0xb7fddbca in KonqView::~KonqView () from /usr/lib/libkdeinit4_konqueror.so
#23 0xb7fe3361 in KonqViewManager::removeTab () from /usr/lib/libkdeinit4_konqueror.so
#24 0xb80367ef in KonqMainWindow::slotRemoveTab () from /usr/lib/libkdeinit4_konqueror.so
#25 0xb80392a0 in KonqMainWindow::qt_metacall () from /usr/lib/libkdeinit4_konqueror.so
#26 0xb72f8f0b in QMetaCallEvent::placeMetaCall () from /usr/lib/libQtCore.so.4
#27 0xb72fa60e in QObject::event () from /usr/lib/libQtCore.so.4
#28 0xb69573b1 in QWidget::event () from /usr/lib/libQtGui.so.4
#29 0xb6d50f87 in QMainWindow::event () from /usr/lib/libQtGui.so.4
#30 0xb791e434 in KMainWindow::event () from /usr/lib/libkdeui.so.5
#31 0xb79642bf in KXmlGuiWindow::event () from /usr/lib/libkdeui.so.5
#32 0xb80203e5 in KonqMainWindow::event () from /usr/lib/libkdeinit4_konqueror.so
#33 0xb69026ac in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#34 0xb6909e44 in QApplication::notify () from /usr/lib/libQtGui.so.4
#35 0xb783f24a in KApplication::notify () from /usr/lib/libkdeui.so.5
#36 0xb72ea39b in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#37 0xb72eae58 in QCoreApplicationPrivate::sendPostedEvents () from /usr/lib/libQtCore.so.4
#38 0xb72eb02d in QCoreApplication::sendPostedEvents () from /usr/lib/libQtCore.so.4
#39 0xb731599f in ?? () from /usr/lib/libQtCore.so.4
#40 0xb637a288 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#41 0xb637d878 in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0
#42 0xb637d9ea in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#43 0xb73155cc in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#44 0xb69a1535 in ?? () from /usr/lib/libQtGui.so.4
#45 0xb72e8929 in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#46 0xb72e8d72 in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#47 0xb72eb0ef in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#48 0xb6902527 in QApplication::exec () from /usr/lib/libQtGui.so.4
#49 0xb80603b9 in kdemain () from /usr/lib/libkdeinit4_konqueror.so
#50 0x0804858b in _start ()


Here is a build kdebase, (I quess, konqueror it's from it, and it'll be helpfull).

# $Id: PKGBUILD 38416 2009-05-07 09:01:58Z pierre $
# Maintainer: Pierre Schmitz <pierre@archlinux.de>

pkgname=kdebase
pkgver=4.2.3
pkgrel=2
pkgdesc="KDE Base Applications"
arch=('i686' 'x86_64')
url='http://www.kde.org'
license=('GPL' 'LGPL' 'FDL')
groups=('kde')
depends=('kdelibs' 'kdebase-runtime' 'qimageblitz' 'libraw1394>=2.0.2')
makedepends=('kdebase-workspace' 'pkgconfig' 'cmake' 'automoc4')
optdepends=('kdebase-workspace')
options=('docs')
install='kdebase.install'
source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
md5sums=('8779d4bd85d356300e22dc34bbeb06f9')

build() {
	cd $srcdir
	mkdir build
	cd build
	cmake ../${pkgname}-${pkgver} \
		-DCMAKE_BUILD_TYPE=Release \
		-DCMAKE_SKIP_RPATH=ON \
		-DCMAKE_{SHARED,MODULE,EXE}_LINKER_FLAGS='-Wl,--no-undefined -Wl,--as-needed' \
		-DCMAKE_INSTALL_PREFIX=/usr
	make
	make DESTDIR=$pkgdir install
}

and kdebase.install

post_install() {
	xdg-icon-resource forceupdate --theme hicolor &> /dev/null
}

post_upgrade() {
	post_install
}

post_remove() {
	post_install
}


Best regards.
Comment 1 Dario Andres 2009-09-12 17:03:06 UTC
Bug 207173 could be related to this too. Thanks
Comment 2 David Faure 2009-09-25 17:56:21 UTC
Hmm, not exactly the same as 207173, because it's triggered by closeUrl(), not by hide().
But indeed it's another cause for the htmlpart's widget getting focus while it's being deleted...
Comment 3 David Faure 2009-09-25 19:47:26 UTC
SVN commit 1028058 by dfaure:

Better fix for 208374 (close tab with findbar shown)
which also fixes 194850 (close tab while it's loading, triggers setFocusNode somehow) :

make sure that no setFocus() from the dtor will trigger a part manager that knows
about this part, by unregistering the part from the partmanager(s).

CCBUG: 208374
BUG: 194850


 M  +11 -7     khtml_part.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1028058