Better fix for 208374 (close tab with findbar shown) which also fixes 194850 (close tab while it's loading, triggers setFocusNode somehow) :

make sure that no setFocus() from the dtor will trigger a part manager that knows
about this part, by unregistering the part from the partmanager(s).

CCBUG: 208374
BUG: 194850

svn path=/trunk/KDE/kdelibs/; revision=1028058